correct footer text size, to bigh on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,9 +102,8 @@ a {
     margin: 0 15px;
 }
 .footer-menu-one ul li a{
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
-    letter-spacing: 1px;
     color: white;
     text-transform: uppercase;
 }
